--- a/ansible.cfg
+++ b/ansible.cfg
@@ -24,7 +24,7 @@ inventory       = /home/ec2-user/inv.yml
 # Plays will gather facts by default, which contain information about
 # the remote system.
 #
-# smart - gather by default, but dn't egather if already gatorhered
+# smart - gather by default, but don't regather if already gathered
 # implicit - gather by default, turn off with gather_facts: False
 # explicit - do not gather by default, must say gather_facts: True
 #gathering = implicit
@@ -64,11 +64,11 @@ inventory       = /home/ec2-user/inv.yml
 # collections_paths = ~/.ansible/collections:/usr/share/ansible/collections
 
 # Paths to search for roles, colon separated
-#roles_path = ~/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles
-
+roles_path = /home/ec2-user/roles
 # Host key checking is enabled by default
-host_key_checking = False 
+host_key_checking = False
 interpreter_python=auto_silent
+
 # You can only have one 'stdout' callback type enabled at a time. The default
 # is 'default'. The 'yaml' or 'debug' stdout callback plugins are easier to read.
 #
@@ -77,7 +77,7 @@ interpreter_python=auto_silent
 #stdout_callback = debug
 
 
-# Ansible ships wih some plugins that require twhitelisting,
+# Ansible ships with some plugins that require whitelisting,
 # this is done to avoid running all of a type by default.
 # These setting lists those that you want enabled for your system.
 # Custom plugins should not need this unless plugin author disables them
@@ -118,8 +118,8 @@ log_path = /home/ec2-user/ansible.log
 #
 #executable = /bin/sh
 
-# By default, variables from roles will be visible in the global variablescope. To prevent this,
-#  set the following option to True, and only
+# By default, variables from roles will be visible in the global variable
+# scope. To prevent this, set the following option to True, and only
 # tasks and handlers within the role will see the variables there
 #
 #private_role_vars = False
@@ -132,8 +132,8 @@ log_path = /home/ec2-user/ansible.log
 #
 #private_key_file = /path/to/file
 
-# If set, configures the path to the Vault password fil as an alternative to# specifying --vaule
-#t-password-file on the command line. This can also be
+# If set, configures the path to the Vault password file as an alternative to
+# specifying --vault-password-file on the command line. This can also be
 # an executable script that returns the vault password to stdout.
 #
 #vault_password_file = /path/to/vault_password_file
@@ -161,8 +161,8 @@ log_path = /home/ec2-user/ansible.log
 # not the task's args. This is a security feature because ansible cannot know
 # if the *module* considers an argument to be no_log at the time that the
 # header is printed. If your environment doesn't have a problem securing
-#stdout from asible-playbok (or you have manually specified noin your
-# plybook on all of no_log a the tasks where you have secret information) then you can
+# stdout from ansible-playbook (or you have manually specified no_log in your
+# playbook on all of the tasks where you have secret information) then you can
 # safely set this to True to get more informative messages.
 #
 #display_args_to_stdout = False
@@ -232,8 +232,8 @@ log_path = /home/ec2-user/ansible.log
 #cow_selection = default
 #cow_selection = random
 
-# When using the 'random' option for cowsay, stncilswill be reste ricted to this list.
-# it should be formatted as a comma-separated list with no spaces between names.
+# When using the 'random' option for cowsay, stencils will be restrictedto this list.
+# it should be formatted as a  comma-separated list with no spaces between names.
 # NOTE: line continuations here are for formatting purposes only, as the INI parser
 #       in python does not support them.
 #
@@ -254,7 +254,7 @@ log_path = /home/ec2-user/ansible.log
 #
 #fact_caching = memory
 localhost_warning=false
-deprecation_warnings = False 
+deprecation_warnings = False
 # This option tells Ansible where to cache facts. The value is plugin dependent.
 # For the jsonfile plugin, it should be a path to a local directory.
 # For the redis plugin, the value is a host:port:database triplet: fact_caching_connection = localhost:6379:0
@@ -272,7 +272,7 @@ deprecation_warnings = False
 # prevents logging of task data, off by default
 #no_log = False
 
-# prevents logging of tass,but only on the targets,  ik datas still logged on the master/controller
+# prevents logging of tasks, but only on the targets, data is still logged on the master/controller
 #no_target_syslog = False
 
 # Controls whether Ansible will raise an error or warning if a task has no
