--- a/play.yml
+++ b/play.yml
@@ -3,39 +3,38 @@
   become: yes
   ignore_errors: yes
   vars:
-    username: carol
+    username: serge
     pkg_name: httpd
   tasks:
     - name: Creating user
       user:
-        name: "{{username}}"
-        comment: carol Admin
+        name: "{{ username }}"
+        comment: Serge Admin
         shell: /bin/bash
-    - name: Creating a group
-      group:
-        name: manager
-        state: present 
-          #      when: ansible_os_family == "Debian" 
-    - name: creating a file
+          #when: ansible_os_family == "Debian" 
+    - name: create file 
       file:
-         path: /tmp/ansible.txt
-         state: touch
-         mode: '0600'
-    - name: creating a directory
-      file: 
-         path: /tmp/dir
-         state: directory
-         mode: '0777'
-    - name: Install apache
+        path: /tmp/ansible.txt
+        state: touch
+        mode: '0600'
+    - name: Create directory
+      file:
+        path: /tmp/dir
+        state: directory
+        mode: '0777'
+    - name: install apache
       yum:
-         name: "{{pkg_name}}"
-         state: latest 
-    - name: install finger
-      package:
-        name: "{{ itme}}"
+        name: "{{ pkg_name }}"
         state: present 
+
+    - name: install finger 
+      package: 
+       name: "{{ item }}"
+       state: present 
       with_items:
-         - wget
-         - samba
-         - java-8*
-         - finger     
+        - wget
+        - samba
+        - java-8*
+        - finger
+
+
