--- a/web.yml
+++ b/web.yml
@@ -1,18 +1,15 @@
-
 ---
 - hosts: qaserver
   become: yes
   ignore_errors: yes
-    tasks: 
-      - name: install package 
+    tasks:
+      - name: Install package
         package:
           name: "{{ item }}"
           state: present
-        with_items:
-          - unzip
-          - wget
-          - httpd
-      - name: download 
+      with_items:
+        - unzip
+        - wget
+        - httpd
+      - name: download
         shell: 
-
-
